# mpc-cli

.github/workflows/: check.yml
crates/cli/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: error.rs  fixed_bytes.rs  hash.rs  hash_utils.rs  lib.rs  miller_rabin.rs  mod_int.rs  prime.rs  random.rs  safe_prime.rs  slice.rs  time.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: base58.rs  commitment.rs  error.rs  extend_key.rs  facproof.rs  fixed_bytes.rs  hash.rs  hdpath.rs  lib.rs  mta.rs  paillier.rs  pallier.rs  proof.rs  utils.rs
crates/crypto/src/extend_key/: ecdsa_key.rs  extkey.rs
crates/crypto/src/hdpath/: node.rs  path.rs
crates/crypto/src/mta/: proofs.rs  range_proof.rs
crates/crypto/src/proof/: dln_proof.rs  fac_proof.rs  iterations.rs  mod_proof.rs
crates/crypto/src/utils/: bytes.rs  ecdsa.rs
crates/protobuf/: Cargo.toml  build.rs
crates/protobuf/src/: ecdsa-keygen.proto  ecdsa-resharing.proto  ecdsa-signing.proto  eddsa-keygen.proto  eddsa-resharing.proto  eddsa-signing.proto  lib.rs  message.proto  signature.proto
