[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

bytes = "1.5.0"
hmac = "0.12.1"
elliptic-curve = "0.13.0"
once_cell = "1.18.0"
crypto-bigint = "0.5.3"
k256 = "0.13.1"
ripemd = "0.1.3"
sha2 = "0.10.8"
bs58 = { version = "0.5.0", features = ["check"] }
num-bigint = "0.4.4"
num-traits = "0.2.14"
num-integer = "0.1.45"
num-modular = {version = "0.6.1", features = ["num-bigint", "num-integer", "num-traits"]}
rand = "0.8.5"
rayon = "1.8.0"

[dev-dependencies]
hex-literal = "0.4.1"
serde_json = "1.0.107"
